Реализовал логику MVC и сделал фейк базы

--- a/Diplom/Views/Shared/_Layout.cshtml
+++ b/Diplom/Views/Shared/_Layout.cshtml
@@ -9,8 +9,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
+        <nav class="navbar navbar-expand-sm navbar-light bg-white">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Продуктовый магазин</a>
+                <form class="form-inline my-2 my-lg-0" action="@Url.Action(nameof(FileController.GetListDataFiles), "File")">
+                    @*<button class="bu" placeholder="Введите текст" name="query"/>*@
+                    <button class="btn btn-outline-info my-2 my-sm-3" type="submit">Поиск</button>
+                </form>
+            @*<div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Diplom</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -26,20 +31,17 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>*@
         </nav>
     </header>
+
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - Diplom - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
