--- a/Diplom/Views/_ViewImports.cshtml
+++ b/Diplom/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Diplom
 @using Diplom.Models
+@using Diplom.Controllers
+@using DiplomInfo.DataBase.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
