--- a/Diplom/Views/Shared/_Layout.cshtml
+++ b/Diplom/Views/Shared/_Layout.cshtml
@@ -10,28 +10,11 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-white">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Продуктовый магазин</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Диплом</a>
                 <form class="form-inline my-2 my-lg-0" action="@Url.Action(nameof(FileController.GetListDataFiles), "File")">
                     @*<button class="bu" placeholder="Введите текст" name="query"/>*@
-                    <button class="btn btn-outline-info my-2 my-sm-3" type="submit">Поиск</button>
+                    <button class="btn btn-outline-info my-2 my-sm-3" type="submit">Получить все из базы</button>
                 </form>
-            @*<div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Diplom</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>*@
         </nav>
     </header>
 
