--- a/Diplom/Views/Home/Index.cshtml
+++ b/Diplom/Views/Home/Index.cshtml
@@ -7,5 +7,6 @@
                                                             method="post" enctype="multipart/form-data">
         <input type="file" name ="file.txt"/>
         <input type="submit" value="Загрузить"/>
+        <script src="js/FileNameSciprt.js"></script>
     </form>
 </body>
