внес правки, чтобы при обновление uploads не дубрировались файлы в базе

--- a/Diplom/Views/Home/Index.cshtml
+++ b/Diplom/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     
    <form method="post" action="@Url.Action(nameof(FileController.Uploads),"File")" enctype="multipart/form-data">
         <input id="file" type="file" name ="file.txt"/>
-        <input type="submit" value="Загрузить" action="@Url.Action(nameof(FileController.Uploads),"File")"/>
+        <input type="submit" value="Загрузить"/>
     </form>
 
     <script> 
