--- a/Diplom/Views/File/FileData.cshtml
+++ b/Diplom/Views/File/FileData.cshtml
@@ -1,7 +1,7 @@
 ﻿@model FileDTO
 
 <p><strong>Название:</strong>@Model.Name</p>
-<p><strong>Blob:</strong><a>@Model.Text</a></p>
+<p><strong>Текст:</strong><a>@Model.Text</a></p>
 <p><strong>Хэш:</strong>@Model.Hash</p>
 <p><strong>Шифр:</strong>@Model.AsymetricCode</p>
 @*<p><strong>Ключ шифровки:</strong>@Model.KeyEncrypt</p>
