--- a/Diplom/Views/File/FileData.cshtml
+++ b/Diplom/Views/File/FileData.cshtml
@@ -1,12 +1,15 @@
 ﻿@model FileDTO
 
 <p><strong>Название:</strong>@Model.Name</p>
-<p><strong>Текст:</strong><a>@Model.Text</a></p>
+@*<p><strong>Текст:</strong><a>@Model.Text</a></p>*@
 <p><strong>Хэш:</strong>@Model.Hash</p>
 <p><strong>Шифр:</strong>@Model.AsymetricCode</p>
-@*<p><strong>Ключ шифровки:</strong>@Model.KeyEncrypt</p>
-<p><strong>Ключ дешифровки:</strong>@Model.KeyDecrypt</p>*@
 <form action="@Url.Action(nameof(FileController.DownloadFile),"File")" method="get">
     <input type="hidden" name="id" value="@Model.Id" />
     <button class=" btn btn-success" type="submit">Скачать</button>
+</form>
+
+<form action="@Url.Action(nameof(FileController.GetDecryptText),"File")">
+    <input type="hidden" name="id" value="@Model.Id"/>
+    <button class="btn btn-success  my-2 mb-lg-n4" type="submit">Показать</button>
 </form>
