--- a/Diplom/Views/File/ListFiles.cshtml
+++ b/Diplom/Views/File/ListFiles.cshtml
@@ -5,6 +5,7 @@
         <tr>
             <th scope="col">Номер</th>
             <th scope="col">Название</th>
+            <th scope="col">Хозяин</th>
             <th scope="col">Дата</th>
             <th scope="col">Время</th>
             <th scope="col">Скачать файл</th>
@@ -18,6 +19,16 @@
             <tr>
                 <td>@(i+1)</td>
                 <td> <a href="@Url.Action(nameof(FileController.GetDataFile),"File", new {fileId = @Model[i].Id} )" > @Model[i].Name</a></td>
+                
+                if(Model[i].User.FirstName+Model[i].User.SecondName+Model[i].User.ThirdName == string.Empty)
+                {
+                    <td>Нет хозяина</td>
+                }
+                else
+                {
+                    <td>@(Model[i].User.FirstName + " " + Model[i].User.SecondName + " " + Model[i].User.ThirdName)</td>
+                }
+
                 <td>@Model[i].DateTme.Date.ToString("dd/MM/yyyy")</td>
                 <td>@Model[i].DateTme.ToString("HH:mm:ss")</td>
                 <td>
