--- a/Diplom/Views/File/FileIsExists.cshtml
+++ b/Diplom/Views/File/FileIsExists.cshtml
@@ -1,4 +1,4 @@
-﻿<h1>Возможно это фальсифицированный файл</h1>
+﻿<h1>Данный файл не был подписан. Осторожно: возможна фальсификация подписи</h1>
 
 
 <button class="btn btn-success  my-2 mb-lg-n4"
